// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flushChunks() called as pure function babel - chunkNames 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "bootstrap.no_css.js",
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
  ],
}
`;

exports[`flushChunks() called as pure function babel: uses default entries when no named chunks provided via opts.before/after 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "bootstrap.no_css.js",
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "2.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
    "2.css",
  ],
}
`;

exports[`flushChunks() called as pure function babel: uses entries provided by opts.before/after 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "2.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
    "2.css",
  ],
}
`;

exports[`flushChunks() called as pure function webpack - chunkNames 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "bootstrap.no_css.js",
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
  ],
}
`;

exports[`flushChunks() called as pure function webpack: uses default entries when no named chunks provided via opts.before/after 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "bootstrap.no_css.js",
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "2.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
    "2.css",
  ],
}
`;

exports[`flushChunks() called as pure function webpack: uses entries provided by opts.before/after 1`] = `
Object {
  "Css": [Function],
  "CssHash": [Function],
  "Js": [Function],
  "Styles": [Function],
  "css": Object {
    "toString": [Function],
  },
  "cssHash": Object {
    "toString": [Function],
  },
  "cssHashRaw": Object {
    "chunk1": "/static/0.css",
    "chunk2": "/static/1.css",
    "main": "/static/main.css",
  },
  "js": Object {
    "toString": [Function],
  },
  "outputPath": undefined,
  "publicPath": "/static",
  "scripts": Array [
    "vendor.no_css.js",
    "0.no_css.js",
    "1.no_css.js",
    "2.no_css.js",
    "main.no_css.js",
  ],
  "styles": Object {
    "toString": [Function],
  },
  "stylesheets": Array [
    "main.css",
    "0.css",
    "1.css",
    "2.css",
  ],
}
`;
